force-app/main/default/objects/ALC_Automation_Log__c/ALC_Automation_Log__c.object-meta.xml
<CustomObject>
    <label>ALC Automation Log</label>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>ALC Automation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALC Automation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>