force-app/main/default/objects/ALC_Automation_Log__c/fields/ALC__c.field-meta.xml
<CustomField>
    <fullName>ALC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALC</label>
    <referenceTo>ALC__c</referenceTo>
    <relationshipLabel>ALC Automation Logs</relationshipLabel>
    <relationshipName>ALC_Automation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>