force-app/main/default/objects/ALC_Automation_Log__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>ALC Automation Logs</relationshipLabel>
    <relationshipName>ALC_Automation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>