force-app/main/default/objects/ALC_Automation_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Creation Failed</fullName>
            </value>
            <value>
                <fullName>Candidate Creation Failed</fullName>
            </value>
            <value>
                <fullName>Matching Failed</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>