force-app/main/default/objects/ALC_Automation_Log__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Created</fullName>
            </value>
            <value>
                <fullName>Candidate Created</fullName>
            </value>
            <value>
                <fullName>Contact Linked</fullName>
            </value>
            <value>
                <fullName>Candidate Linked</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>