force-app/main/default/objects/ALC_Automation_Log__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resolved_ALC_Automation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>