force-app/main/default/objects/ALC_Automation_Log__c/listViews/Recent_Automation_Logs.listView-meta.xml
<ListView>
    <fullName>Recent_Automation_Logs</fullName>
    <columns>NAME</columns>
    <columns>Operation_Type__c</columns>
    <columns>Success__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recent Automation Logs</label>
</ListView>